--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,7 +5,8 @@
     width: 100%;
     height: 56px;
     color:gray;
-    border-top: grey 1px solid
+    border-top: grey 1px solid;
+    z-index:100
     
 }
 
