--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -39,11 +39,23 @@
 
 #options{
     color: grey;
+    position: inline;
+    margin-top: -24px;
+}
+
+.collapse.show {
+   
+    margin-top: 13px;
 }
 
 .navbar-toggle{
-    float: right;
-    color:grey;
+    /* float: right;
+    color:grey; */
+        /* float: right; */
+        color: grey;
+        margin-left: 269px;
+        border: none;
+        background-color: white;
 }
 
 .responsive-img{
