--- a/src/Components/RouteSave/RouteSave.css
+++ b/src/Components/RouteSave/RouteSave.css
@@ -4,8 +4,9 @@
     margin-top: 73px;
 }
 .tittle{
-    font-size: 40px;
-    margin: 55px;
-    color:#00BCD4
+    font-size: 24px;
+    text-align: center;
+    margin: 23px;
+    color: #00BCD4;
 }
 
