se agrega componente para las recomendaciones

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -131,3 +131,11 @@
     background-color: #fff;
     width: 100%;
 }
+
+.fas.fa-search{
+    font-size: 20px;
+}
+
+#logo{
+    margin-bottom: 5px;
+}
