--- a/src/Components/Map/Map.css
+++ b/src/Components/Map/Map.css
@@ -1,40 +1,14 @@
 
-*{padding:0;margin:0;}
-
-.label-container{
-	position:fixed;
-	bottom:48px;
-	right:105px;
-	display:table;
-	visibility: hidden;
-}
-
-.label-text{
-	color:#FFF;
-	background:rgba(51,51,51,0.5);
-	display:table-cell;
-	vertical-align:middle;
-	padding:10px;
-	border-radius:3px;
-}
-
-.label-arrow{
-	display:table-cell;
-	vertical-align:middle;
-	color:#333;
-	opacity:0.5;
-}
-
 .float{
     position: fixed;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     bottom: 92px;
     /* margin-left: -22px; */
   
     right: 10px;
-    background-color: #00BCD4;
-    color: #FFF;
+    background-color: #fff;
+    color: red;
     border-radius: 50px;
     text-align: center;
     box-shadow: 2px 2px 3px #999;
@@ -42,62 +16,9 @@
     animation: bot-to-top 2s ease-out;
 }
 
-ul{
-	position:fixed;
-	right:40px;
-	padding-bottom:20px;
-	bottom:80px;
-	z-index:100;
-}
-
-ul li{
-	list-style:none;
-	margin-bottom:10px;
-}
-
-ul li a{
-    background-color: #00BCD4;
-    color: #FFF;
-    border-radius: 50px;
-    text-align: center;
-    box-shadow: 2px 2px 3px #999;
-    width: 60px;
-    height: 60px;
-    display: block;
-    margin-bottom: 45px;
-    margin-right: -31px;
-}
-
-.btnIcon{
-    
-        margin-bottom: -37px;
-    
-
-}
-.btn{
-    margin-bottom: 45px;
-    padding-top: 11px;
-    font-size: 25px;
-    margin-right: -5px;
-    
-}
-
-.far.fa-share-square{
-    padding-top: 18px;
-    font-size: 25px;
-    margin-right: -8px;
-}
-
- ul:hover{
-	visibility:visible!important;
-    opacity:1!important;
-    
-    
-} 
-
-.my-float{
-	font-size:24px;
-	margin-top:18px;
+.far.fa-stop-circle {
+    font-size: 26px;
+    margin-top: 13px;
 }
 
 a#menu-share + ul{
@@ -137,6 +58,6 @@ a#menu-share:hover > i{
     to {transform: rotate(0deg);}
 }
 
-.far.fa-share-square{
+/* .far.fa-share-square{
     margin-bottom: 20px
-}
+} */
