--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,67 +1,8 @@
-/* .container-fluid{
-    width:100%;
-}
-
-.navbar-brand{
-    color: #00BCD4;
-}
-
-.inputRoute{
-    border: grey 0.5px solid;
-    margin:5px;
-    width: 270px;
-    text-align: center;
-    justify-content: center;
-}
-
-
-
-.buttonSearch{
-    background: #00BCD4;
-    width: 270px;
-    height: 2rem;
-    color: white;
-    text-align: center;
-    justify-content: center;
-    margin: 0 auto;
-    margin:0;
-    margin-top:10px;
-    margin-left: 5px;
-}
-
-#search{
-    color: #fff;
-    background-color: #00BCD4;
-    border: none;
-
-    
-}
-
-#options{
-    color: grey;
-    position: inline;
-    margin-top: -24px;
-}
-
-.collapse.show {
-   
-    margin-top: 13px;
-}
-
-.navbar-toggle{
-    /* float: right;
-    color:grey; */
-        /* float: right; 
-        color: grey;
-        margin-left: 269px;
-        border: none;
-        background-color: white;
-}*/
-
 .responsive-img{
     width: 150px;
     height: 40px;
-} */
+} 
+
 .container-fluid{
     width:100%;
 }
@@ -78,8 +19,6 @@
     justify-content: center;
     font-family: 'Roboto', sans-serif;
 }
-
-
 
 .buttonSearch{
     background: #00BCD4;
@@ -130,6 +69,7 @@
 .navbar.navbar-inverse{
     background-color: #fff;
     width: 100%;
+    box-shadow: 2px 2px 0px rgb(187, 184, 184);
 }
 
 .fas.fa-search{
