--- a/src/Components/Share/imgShare.css
+++ b/src/Components/Share/imgShare.css
@@ -1,7 +1,8 @@
 
-    .imgShare {
+    .imgRoute {
         width: 100%;
         margin-left: -15px;
+        margin-top: 35px;
     }
     .tittleShare {
         font-size: 24px;
