--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,11 +1,11 @@
 .header-profile{
-position: absolute;
-width: 100%;
-height: 300px;
-top:-100px;
-background: #89A6FB;
-border-radius:10% 50% 50% ;
-z-index:-1;
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    top:-100px;
+    background: #89A6FB;
+    border-radius:10% 50% 50% ;
+    z-index:-1;
 
 }
 
@@ -29,7 +29,7 @@ z-index:-1;
     margin-top: 250px;
 }
 
-#myRoutes, #lastRoutes{
+#myRoutes{
     width: 300px;
     height: 60px;
     border: 0.5px #b6b2b2 solid;
@@ -45,10 +45,38 @@ z-index:-1;
 }
 
 #lastRouteImg{
-    margin-right: 10px;
+    text-align: center;
+    font-size: 25px;
 }
 
 #saveImg{
     margin-right: 10px;
 }
 
+#lastRoute{
+    border: #969494 0.5px solid;
+    width: 80%;
+    height: 150px;
+    border-radius: 5px;
+    display:flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top:30px;
+}
+
+#textLastRoute{
+    margin-top: 30px;
+    text-align: center;
+}
+
+.fas.fa-route{
+    color: #00BCD4;
+    font-size: 30px;
+    justify-content: center;
+    margin: 0 auto;
+    display: flex;
+}
+
+.fas.fa-map-marked-alt{
+    color: #00BCD4;
+}
