se agrega pantalla con mapas guardados

--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -25,7 +25,7 @@
 #title{
     margin-top: 30px;
     font-family: 'roboto' sans-serif;
-    color: #212121;
+    color: grey;
     text-align: center;
     font-size: 23px;
     margin-bottom: 20px;
