--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -17,7 +17,7 @@
     width: 270px;
     text-align: center;
     justify-content: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', serif;
 }
 
 .buttonSearch{
@@ -31,7 +31,8 @@
     margin:0;
     margin-top:10px;
     margin-left: 5px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
 }
 
 #search{
