--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -18,6 +18,7 @@
     text-align: center;
     justify-content: center;
     font-family: 'Roboto Slab', serif;
+    border-radius: 3px;
 }
 
 .buttonSearch{
@@ -32,7 +33,8 @@
     margin-top:10px;
     margin-left: 5px;
     font-family: 'Roboto Slab', serif;
-    font-size: 20px;
+    font-size: 19px;
+    border-radius: 3px;
 }
 
 #search{
