--- a/src/Components/News/News.css
+++ b/src/Components/News/News.css
@@ -23,7 +23,7 @@
 }
 
 #title{
-    margin-top: 30px;
+    margin-top: 20px;
     font-family: 'roboto' sans-serif;
     color: grey;
     text-align: center;
@@ -33,19 +33,24 @@
 
 .textLabel{
     font-family: 'roboto' sans-serif;
-    font-size: 20px;
+    font-size: 18px;
+    margin:7px;
 }
 
 .textLabel, .iconImg{
     display: inline-block;
-    margin:7px;
+    
 }
 
 #iconTuristic{
     margin-left: 100px;
 }
 
+#iconParkin{
+    margin-left:10px;
+}
+
 #iconBrokenRoute{
-    margin-left: 55px;
+    margin-left: 95px;
 }
 
